--- a/app/flex/templates/blocks/content_section.html
+++ b/app/flex/templates/blocks/content_section.html
@@ -21,6 +21,11 @@
 {% if self.layout == 'two_columns_with_image' %}
 <section class="ftco-section ftco-faqs">
     <div class="container">
+        <div class="row justify-content-center mb-5">
+            <div class="col-md-8 text-center heading-section ftco-animate">
+                <h2 class="mb-3">{{ self.heading }}</h2>
+            </div>
+        </div>
         <div class="row">
             <div class="col-lg-6 ftco-animate">
                 <img src="{{ img.url }}" alt="{{ img.alt }}" class="img-fluid">
