--- a/app/flex/templates/blocks/hero_section.html
+++ b/app/flex/templates/blocks/hero_section.html
@@ -2,11 +2,9 @@
 
 <div class="hero-wrap js-fullheight">
     <div class="overlay"></div>
-    <div class="container-fluid px-0">
+    <div class="container px-0">
         <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-start">
-            <img class="one-third js-fullheight align-self-end order-md-first img-fluid"
-                src="{% static 'images/undraw_co-working_825n.svg' %}" alt="">
-            <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
+            <div class="col-lg-6 d-flex align-items-center ftco-animate">
                 <div class="text mt-5">
                     <span class="subheading">{{self.subheading}}</span>
                     <h1 class="mb-3">{{self.heading}}</h1>
@@ -14,6 +12,10 @@
                     <p><a href="#" class="btn btn-secondary px-4 py-3">{{self.button}}</a></p>
                 </div>
             </div>
+            <div class="col-lg-6">
+                <img class="img-fluid" src="{% static 'images/undraw_co-working_825n.svg' %}" alt="">
+            </div>
+
         </div>
     </div>
 </div>
