--- a/app/flex/templates/blocks/logo_cloud.html
+++ b/app/flex/templates/blocks/logo_cloud.html
@@ -5,7 +5,7 @@
         <div class="row">
             {% for logo in self.logos %}
             {% image logo.image original as img %}
-            <div class="col-sm ftco-animate">
+            <div class="col-6 col-sm-3 py-4 ftco-animate">
                 <a href="#" class="partner"><img src="{{ img.url }}" alt="{{ img.alt }}" class="img-fluid" alt="Colorlib Template"></a>
             </div>  
             {% endfor %}
