--- a/app/flex/templates/blocks/hero_section.html
+++ b/app/flex/templates/blocks/hero_section.html
@@ -9,7 +9,7 @@
                     <span class="subheading">{{self.subheading}}</span>
                     <h1 class="mb-3">{{self.heading}}</h1>
                     <p>{{self.description}}</p>
-                    <p><a href="#" class="btn btn-secondary px-4 py-3">{{self.button}}</a></p>
+                    <p><a href="{{ self.button_link }}" target="_blank" class="btn btn-secondary px-4 py-3">{{self.button}}</a></p>
                 </div>
             </div>
             <div class="col-lg-6">
