--- a/app/core/templates/home_base.html
+++ b/app/core/templates/home_base.html
@@ -70,8 +70,7 @@
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">99shops</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
+                        <p>{{ settings.theme.ThemeSettings.about_short_description}}</p>
                         <ul class="ftco-footer-social list-unstyled mb-0">
                             <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -80,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-md">
-                    {% flat_menu 'useful_links' max_levels=1 show_menu_heading=True  fall_back_to_default_site_menus=True %}
+                    {% flat_menu 'useful_links' max_levels=1 show_menu_heading=True fall_back_to_default_site_menus=True %}
 
                 </div>
                 <div class="col-md">
@@ -99,12 +98,9 @@
                         <h2 class="ftco-heading-2">Office</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="mr-3 fa fa-map-marker"></span><span class="text">203 Fake St. Mountain
-                                        View, San Francisco, California, USA</span></li>
-                                <li><a href="#"><span class="mr-3 fa fa-phone"></span><span class="text">+2 392 3929
-                                            210</span></a></li>
-                                <li><a href="#"><span class="mr-3 fa fa-envelope"></span><span
-                                            class="text">info@yourdomain.com</span></a></li>
+                                <li><span class="mr-3 fa fa-map-marker"></span><span class="text">{{ settings.theme.ThemeSettings.about_address }}</span></li>
+                                <li><a href="tel:{{ settings.theme.ThemeSettings.about_phone }}"><span class="mr-3 fa fa-phone"></span><span class="text">{{ settings.theme.ThemeSettings.about_phone }}</span></a></li>
+                                <li><a href="mail:{{ settings.theme.ThemeSettings.about_email }}"><span class="mr-3 fa fa-envelope"></span><span class="text">{{ settings.theme.ThemeSettings.about_email }}</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -118,7 +114,7 @@
                         Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
                         is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
+                            target="_blank">99shops</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
