--- a/app/core/templates/menus/custom_main_menu.html
+++ b/app/core/templates/menus/custom_main_menu.html
@@ -2,12 +2,11 @@
 
 <ul class="navbar-nav ml-auto">
     {% for item in menu_items %}
-    <li class="nav-item {{ item.active_class }}">
+    <li class="nav-item {{ item.handle }} {{ item.active_class }}">
         <a class="nav-link" href="{{ item.href }}">{{ item.text }}</a>
         {% if item.has_children_in_menu %}
         {% sub_menu item %}
         {% endif %}
     </li>
     {% endfor %}
-    <li class="nav-item cta"><a href="#" class="nav-link"><span>Get started</span></a></li>
 </ul>
