--- a/app/flex/templates/blocks/content_section.html
+++ b/app/flex/templates/blocks/content_section.html
@@ -26,7 +26,7 @@
                 <h2 class="mb-3">{{ self.heading }}</h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row d-flex align-items-center">
             <div class="col-lg-6 ftco-animate">
                 <img src="{{ img.url }}" alt="{{ img.alt }}" class="img-fluid">
             </div>
