--- a/app/flex/templates/blocks/page_heading_section.html
+++ b/app/flex/templates/blocks/page_heading_section.html
@@ -4,8 +4,8 @@
     <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-start">
             <div class="col-md-8 ftco-animate text-center text-md-left mb-5">
-                <p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Home <i
-                                class="ion-ios-arrow-forward"></i></a></span> <span>Pricing</span></p>
+                <p class="breadcrumbs mb-0"><span class="mr-3"><a href="/">Home <i
+                                class="ion-ios-arrow-forward"></i></a></span> <span>{{ page.title }}</span></p>
                 <h1 class="mb-3 bread">{{ self.heading }}</h1>
             </div>
         </div>
