--- a/app/blog/templates/blog/blog_index_page.html
+++ b/app/blog/templates/blog/blog_index_page.html
@@ -13,7 +13,7 @@
             <div class="col-md-8 ftco-animate text-center text-md-left mb-5">
                 <p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Home <i
                                 class="ion-ios-arrow-forward"></i></a></span> <span>Blog</span></p>
-                <h1 class="mb-3 bread">Blog</h1>
+                <h1 class="mb-3 bread">Blog Test</h1>
             </div>
         </div>
     </div>
